fix overflow && scroll bottom div

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1433,6 +1433,9 @@ select {
 .overflow-y-hidden {
   overflow-y: hidden;
 }
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
